Avances de java y resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">LastQuakeChile</string>
+
+
+    <!-- TOOLBAR STRINGS -->
+    <string name="refresh">Refresh</string>
+    <string name="settings">Settings</string>
+
+
+    <!-- OTHER STRINGS -->
 </resources>
