--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">LastQuakeChile</string>
 
-
     <!-- TOOLBAR STRINGS -->
     <string name="refresh">Refresh</string>
     <string name="settings">Settings</string>
@@ -10,5 +9,20 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
-    <!-- OTHER STRINGS -->
+    <!-- TODO: Cambiar la direccion hacia Heroku y Actualizar HEROKU con el nuevo config en xamp -->
+    <!-- URL SERVIDOR HEROKU -->
+    <string name="URL_GET">http://192.168.0.13/lastquake_server/public/get_quakes.php</string>
+
+    <!-- FORMATO DATE/TIME A USAR -->
+    <string name="DATETIME_FORMAT">yyyy-MM-dd HH:mm:ss</string>
+
+    <!-- KEY DE JSON -->
+    <string name="KEY_FECHA_LOCAL">fecha_local</string>
+    <string name="KEY_FECHA_UTC">fecha_utc</string>
+    <string name="KEY_LATITUD">latitud</string>
+    <string name="KEY_LONGITUD">longitud</string>
+    <string name="KEY_MAGNITUD">magnitud</string>
+    <string name="KEY_AGENCIA">agencia</string>
+    <string name="KEY_REFERENCIA">referencia</string>
+    <string name="KEY_IMAGEN_URL">imagen_url</string>
 </resources>
