Se agrega escala de sismo y profundidad en el view model y en model de datos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="KEY_LATITUD">latitud</string>
     <string name="KEY_LONGITUD">longitud</string>
     <string name="KEY_MAGNITUD">magnitud</string>
+    <string name="KEY_ESCALA">escala</string>
+    <string name="KEY_PROFUNDIDAD">profundidad</string>
     <string name="KEY_AGENCIA">agencia</string>
     <string name="KEY_REFERENCIA">referencia</string>
     <string name="KEY_IMAGEN_URL">imagen_url</string>
