--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- TOOLBAR STRINGS -->
     <string name="refresh">Refresh</string>
     <string name="settings">Settings</string>
+    <string name="search">Buscar</string>
 
     <!-- TODO: Cambiar la direccion hacia Heroku y Actualizar HEROKU con el nuevo config en xamp -->
     <!-- URL SERVIDOR HEROKU -->
