--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,11 +37,13 @@
     <string name="quake_time_second">%1$d s</string>
     <string name="imagen_geografica_posicion_sismo">Imagen geografica posicion sismo</string>
     <string name="icono_tiempo">Icono tiempo</string>
-    <string name="tiempo">Tiempo</string>
+    <string name="tiempo">Fecha/Hora</string>
     <string name="icono_distancia">Icono distancia</string>
     <string name="distancia">Distancia</string>
     <string name="icono_epicentro">Icono epicentro</string>
+    <string name="icono_escala">Icono escala</string>
     <string name="profundidad">Profundidad</string>
+    <string name="escala">Escala</string>
     <string name="quake_details_escala">Escala %1$s</string>
     <string name="quake_details_sensible">Sismo %1$s por la comunidad</string>
     <string name="quake_details_profundidad">%.1f km</string>
