Correccion de icono de notificaciones y soporte para notificaciones desde consola firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,9 @@
     <string name="TAG_VOLLEY_ERROR_PARSE">Parse error</string>
 
 
-    <!-- KEY PARA INTENT -->
+    <!-- KEY PARA INTENT & NOTIFICACIONES -->
+    <string name="INTENT_TITULO">titulo</string>
+    <string name="INTENT_DESCRIPCION">descripcion</string>
     <string name="INTENT_CIUDAD">ciudad</string>
     <string name="INTENT_REFERENCIA">referencia</string>
     <string name="INTENT_LATITUD">latitud</string>
